--- a/dashboard/pages/profile.html
+++ b/dashboard/pages/profile.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="animate__animated animate__fadeInDown">Update your profile </h1>
+        <h1 class="animate__animated animate__fadeInDown">Update your profile</h1>
         <form id="editProfileForm">
             <div class="form-group">
                 <label for="profileImage">Profile Image</label>
@@ -52,7 +52,7 @@
                 <input type="text" class="form-control" id="address" placeholder="Enter address">
             </div>
             <div class="form-group">
-                <label for="dobDayMonthyear">Date of Birth </label>
+                <label for="dobDayMonthyear">Date of Birth</label>
                 <input type="text" class="form-control" id="dobDayMonthyear" placeholder="Enter date of birth (DD/MM/yyyy)">
             </div>
             <div class="form-group">
@@ -61,7 +61,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
-        <div class="error-message" id="errorMessage">unable to save profile. Please try again.</div>
+        <div class="error-message" id="errorMessage">Unable to save profile. Please try again.</div>
     </div>
     <nav class="navbar fixed-bottom navbar-light bg-light">
         <!-- Navbar contents -->
