--- a/dashboard/pages/sign-in.html
+++ b/dashboard/pages/sign-in.html
@@ -175,7 +175,7 @@
           // Signed in 
           const user = userCredential.user;
           // Redirect to profile dashboard
-          window.location.href = '../pages/profile.html';
+          window.location.href = 'profile-permanent.html';
         })
         .catch((error) => {
           const errorCode = error.code;
