--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -79,6 +79,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js";
         import { getAuth, createUserWithEmailAndPassword, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js";
+        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore.js";
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
@@ -96,44 +97,51 @@
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
         const auth = getAuth(app);
+        const db = getFirestore(app);
 
         // Handle form submission
-        document.getElementById('signupForm').addEventListener('submit', function(event) {
+        document.getElementById('signupForm').addEventListener('submit', async function(event) {
             event.preventDefault();
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            createUserWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    // Signed in
-                    const user = userCredential.user;
-                    alert('Sign up successful! Welcome, ' + user.email);
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessage = error.message;
-                    alert('Error: ' + errorMessage);
+            try {
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                const user = userCredential.user;
+
+                // Store user data in Firestore
+                await setDoc(doc(db, "users", user.uid), {
+                    email: user.email,
+                    createdAt: new Date()
                 });
+
+                // Redirect to edit profile page
+                window.location.href = "edit-profile.html";
+            } catch (error) {
+                alert('Error: ' + error.message);
+            }
         });
 
         // Handle Google sign-in
-        document.getElementById('googleSignIn').addEventListener('click', function() {
+        document.getElementById('googleSignIn').addEventListener('click', async function() {
             const provider = new GoogleAuthProvider();
 
-            signInWithPopup(auth, provider)
-                .then((result) => {
-                    // This gives you a Google Access Token. You can use it to access the Google API.
-                    const credential = GoogleAuthProvider.credentialFromResult(result);
-                    const token = credential.accessToken;
-                    // The signed-in user info.
-                    const user = result.user;
-                    alert('Google sign-in successful! Welcome, ' + user.displayName);
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessage = error.message;
-                    alert('Error: ' + errorMessage);
+            try {
+                const result = await signInWithPopup(auth, provider);
+                const user = result.user;
+
+                // Store user data in Firestore
+                await setDoc(doc(db, "users", user.uid), {
+                    email: user.email,
+                    displayName: user.displayName,
+                    createdAt: new Date()
                 });
+
+                // Redirect to dashboard
+                window.location.href = "dashboard.html";
+            } catch (error) {
+                alert('Error: ' + error.message);
+            }
         });
     </script>
 
