--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 setInterval(countdown, 1000);
             </script>
 
-            <a href="dashboard/pages/sign-up.html" class="btn btn-donate btn-lg">Support Our Cause</a>
+            <a href="pages/sign-up.html" class="btn btn-donate btn-lg">Support Our Cause</a>
         </div>
     </section>
     <!-- body post here -->
