--- a/pages/edit-profile.html
+++ b/pages/edit-profile.html
@@ -23,7 +23,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="email">Email Address</label>
-                                <input type="email" class="form-control" id="email" placeholder="user@example.com" readonly>
+                                <input type="email" class="form-control" id="email" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="phoneNumber">Phone Number</label>
@@ -31,11 +31,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="dob">Date of Birth</label>
-                                <input type="text" class="form-control" id="dob" placeholder="dd/mm/yyyy" required>
+                                <input type="date" class="form-control" id="dob" required>
                             </div>
                             <div class="form-group">
                                 <label for="description">User Description</label>
-                                <textarea class="form-control" id="description" rows="3" placeholder="Describe yourself in 40-60 words" minlength="40" maxlength="60" required></textarea>
+                                <textarea class="form-control" id="description" rows="3" placeholder="Describe yourself in 40-60 words" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary btn-block">Save</button>
                         </form>
@@ -44,15 +44,19 @@
             </div>
         </div>
     </div>
+
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- Firebase SDK -->
+
+    <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+
     <script>
-        // Your web app's Firebase configuration
+        // Firebase config
         var firebaseConfig = {
             apiKey: "AIzaSyD3mvLJORKunKc5HjLh73NJ1SkByp6797c",
             authDomain: "youthspring-af954.firebaseapp.com",
@@ -62,53 +66,63 @@
             messagingSenderId: "190059933611",
             appId: "1:190059933611:web:871f54b6d282452337acee",
         };
-        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         var db = firebase.firestore();
 
-        // Function to fetch user email and populate form
-        function fetchUserEmail(userId) {
-            db.collection("users").doc(userId).get().then((doc) => {
-                if (doc.exists) {
-                    var userData = doc.data();
-                    document.getElementById('email').value = userData.email;
-                    document.getElementById('fullName').value = userData.fullName;
-                    document.getElementById('phoneNumber').value = userData.phoneNumber;
-                    document.getElementById('dob').value = userData.dob;
-                    document.getElementById('description').value = userData.description;
-                } else {
-                    console.log("No such document!");
-                }
-            }).catch((error) => {
-                console.log("Error getting document:", error);
-            });
-        }
+        // Load user data
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                var userId = user.uid;
+                var email = user.email;
+                document.getElementById('email').value = email;
 
-        // Example user ID, replace with the actual user ID
-        var userId = "exampleUserId";
-        fetchUserEmail(userId);
+                db.collection("users").doc(userId).get().then((doc) => {
+                    if (doc.exists) {
+                        var data = doc.data();
+                        document.getElementById('fullName').value = data.fullName || "";
+                        document.getElementById('phoneNumber').value = data.phoneNumber || "";
+                        document.getElementById('dob').value = data.dob || "";
+                        document.getElementById('description').value = data.description || "";
+                    }
+                });
+            } else {
+                alert("You must be logged in to access this page.");
+                window.location.href = "/login";
+            }
+        });
 
-        // Form submission handler
-        document.getElementById('editProfileForm').addEventListener('submit', function(event) {
-            event.preventDefault();
+        // Form submit
+        document.getElementById('editProfileForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+
             var fullName = document.getElementById('fullName').value;
-            var email = document.getElementById('email').value;
             var phoneNumber = document.getElementById('phoneNumber').value;
             var dob = document.getElementById('dob').value;
             var description = document.getElementById('description').value;
 
-            // Save data to Firestore
-            db.collection("users").doc(email).set({
-                fullName: fullName,
-                phoneNumber: phoneNumber,
-                dob: dob,
-                description: description
-            }).then(function() {
-                alert("Profile updated successfully!");
-                window.location.href = "/dashboard"; // Redirect to dashboard
-            }).catch(function(error) {
-                console.error("Error updating profile: ", error);
-            });
+            // Description length validation
+            if (description.length < 40 || description.length > 60) {
+                alert("Description must be between 40 and 60 characters.");
+                return;
+            }
+
+            if (!confirm("Do you want to save these changes?")) return;
+
+            var user = firebase.auth().currentUser;
+            if (user) {
+                var userId = user.uid;
+                db.collection("users").doc(userId).set({
+                    fullName,
+                    phoneNumber,
+                    dob,
+                    description
+                }).then(() => {
+                    alert("Profile updated successfully!");
+                    window.location.href = "/dashboard";
+                }).catch((error) => {
+                    console.error("Error updating profile:", error);
+                });
+            }
         });
     </script>
 </body>
