--- a/pages/edit-profile.html
+++ b/pages/edit-profile.html
@@ -87,7 +87,7 @@
                 });
             } else {
                 alert("You must be logged in to access this page.");
-                window.location.href = "/login";
+                window.location.href = "/sign-in.html";
             }
         });
 
