--- a/pages/edit-profile.html
+++ b/pages/edit-profile.html
@@ -87,7 +87,7 @@
                 });
             } else {
                 alert("You must be logged in to access this page.");
-                window.location.href = "/sign-in.html";
+                window.location.href = "pages/sign-in.html";
             }
         });
 
@@ -118,7 +118,7 @@
                     description
                 }).then(() => {
                     alert("Profile updated successfully!");
-                    window.location.href = "/dashboard.html";
+                    window.location.href = "pages/dashboard.html";
                 }).catch((error) => {
                     console.error("Error updating profile:", error);
                 });
