--- a/pages/edit-profile.html
+++ b/pages/edit-profile.html
@@ -118,7 +118,7 @@
                     description
                 }).then(() => {
                     alert("Profile updated successfully!");
-                    window.location.href = "pages/dashboard.html";
+                    window.location.href = "../dashboard.html";
                 }).catch((error) => {
                     console.error("Error updating profile:", error);
                 });
