--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -138,7 +138,7 @@
                 });
 
                 // Redirect to dashboard
-                window.location.href = "dashboard.html";
+                window.location.href = "edit-profile.html";
             } catch (error) {
                 alert('Error: ' + error.message);
             }
