--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -67,6 +67,7 @@
                         <button type="button" class="btn btn-neon btn-block social-btn" id="googleSignIn">
                             <i class="fab fa-google"></i> Sign Up with Google
                         </button>
+                        <a href="../login.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
                     </form>
                 </div>
             </div>
