--- a/login.html
+++ b/login.html
@@ -108,7 +108,7 @@
                 const user = userCredential.user;
 
                 // Redirect to dashboard
-                window.location.href = "main.html";
+                window.location.href = "dashboard.html";
             } catch (error) {
                 alert('Error: ' + error.message);
             }
