--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
         }
         /* postbody */
         #postbody { 
-            font-size: 1.4em;
+            font-size: 1.2em;
             text-align: center;
             flex: 1;
             margin-bottom: 70px;
         }
+        .postbody:hover {
+    background-color: gray;
+    }
              /* Bottom Navigation */
       .bottom-nav {
     display: flex;
