--- a/index.html
+++ b/index.html
@@ -163,17 +163,18 @@
             <h1>Empowering Nigerian Youth & The Helpless</h1>
             <p>Together, we can create opportunities for a brighter future.</p>
             <p>
-                "We are launching soon! Be among the first to support Nigeria’s youth."
-                "The platform is under construction, but you can join our early supporters now!"
-                "We’re building something BIG for Nigerian youth. Stay tuned!"
+                "We are launching soon! Be among the first to support Nigeria’s youth.
+                
+            The platform is under construction, but you can join our early supporters now!"
+                <p>We’re building something BIG for Nigerian youth. Stay tuned!</p>
             </p>
             <div class="text-center p-4">
-                <h2>🚀 T-minus <span id="countdown"></span> until we go live!</h2>
+                <h2>🚀<span id="countdown"></span> until we go live!</h2>
             </div>
 
             <script>
                 const countdown = () => {
-                    const launchDate = new Date("April 20, 2025 12:00:00").getTime();
+                    const launchDate = new Date("April 30, 2025 12:00:00").getTime();
                     const now = new Date().getTime();
                     const distance = launchDate - now;
 
