--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet" />
     <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet" />
+    <link rel="stylesheet" href="effects/effects.css">
     <link rel="apple-touch-icon" sizes="76x76" href="dashboard/assets/img/favicon.png">
     <link rel="icon" type="image/png" href="dashboard/assets/img/favicon.png">
     <style>
@@ -207,6 +208,12 @@
         <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
         <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
     </div>
+     <div class="neon-container" id="neonBox">
+    <p class="neon-text">Welcome %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%</p>
+    </div>
+
+    <button class="toggle-btn" id="toggleBtn">Hide</button>
+
     <!-- Footer -->
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -246,5 +253,6 @@
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
+<script src="effects/effects.js"></script>
 </body>
 </html>
