--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
         <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
     </div>
      <div class="neon-container" id="neonBox">
-    <p class="neon-text">Welcome %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%</p>
+    <p class="neon-text">Welcome %%%</p>
+         <p>waitin for you</p>
     </div>
 
     <button class="toggle-btn" id="toggleBtn">Hide</button>
