--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,94 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>main dashboard</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <script type="module" src="../app.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-      * {
-        box-sizing: border-box;
-        font-family: 'Inter', sans-serif;
-      }
-
-      body {
-        margin: 0;
-        padding: 0;
-        background: #f5f7fa;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-      }
-
-      form {
-        background: white;
-        padding: 2rem;
-        border-radius: 16px;
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-        max-width: 400px;
-        width: 100%;
-      }
-
-      h2 {
-        text-align: center;
-        margin-bottom: 1.5rem;
-        color: #333;
-      }
-
-      input,
-      textarea,
-      button {
-        width: 100%;
-        padding: 0.75rem;
-        margin-bottom: 1rem;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        font-size: 1rem;
-        transition: all 0.2s ease-in-out;
-      }
-
-      input:focus,
-      textarea:focus {
-        border-color: #007BFF;
-        outline: none;
-        box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.2);
-      }
-
-      textarea {
-        resize: vertical;
-        min-height: 80px;
-      }
-
-      button {
-        background-color: #007BFF;
-        color: white;
-        font-weight: 600;
-        border: none;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background-color: #0056b3;
-      }
-
-      @media (max-width: 480px) {
-        form {
-          padding: 1.5rem;
+        body {
+            background-color: #f4f4f9;
+            font-family: 'Arial', sans-serif;
         }
-      }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 30px;
+            background-color: #007bff;
+            color: white;
+        }
+
+        .header .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .dropdown-menu {
+            min-width: 150px;
+        }
+
+        .dropdown-toggle::after {
+            display: none;
+        }
+
+        .card {
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            background-color: white;
+        }
+
+        .card-header {
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            font-size: 1.25rem;
+            text-align: center;
+            padding: 10px;
+        }
+
+        .card-body {
+            padding: 30px;
+        }
+
+        .card-body p {
+            font-size: 1.1rem;
+            margin-bottom: 15px;
+        }
+
+        .btn-outline-danger {
+            font-size: 1rem;
+        }
+
+        .dropdown-toggle {
+            font-size: 1.1rem;
+        }
+
+        .container {
+            margin-top: 50px;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+
+        .card-body span {
+            font-weight: bold;
+        }
     </style>
-  </head>
-  <body>
-    <form id="userForm">
-      <h2>User Info Form</h2>
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="text" id="phone" placeholder="Phone Number">
-      <input type="text" id="address" placeholder="Address">
-      <textarea id="description" placeholder="Description"></textarea>
-      <input type="number" id="age" placeholder="Age">
-      <button type="submit">Save Info</button>
-    </form>
-  </body>
+</head>
+<body>
+    <div class="container mt-5">
+        <div class="header">
+            <button class="btn btn-outline-danger" onclick="logout()">Logout</button>
+            <div class="logo">YouthSpring</div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Menu
+                </button>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
+                    <!-- Add more menu items here -->
+                </div>
+            </div>
+        </div>
+        
+        <div class="card mt-4">
+            <div class="card-header">
+                User Profile
+            </div>
+            <div class="card-body">
+                <p><strong>Full Name:</strong> <span id="fullName"></span></p>
+                <p><strong>Email Address:</strong> <span id="email"></span></p>
+                <p><strong>Phone Number:</strong> <span id="phoneNumber"></span></p>
+                <p><strong>Date of Birth:</strong> <span id="dob"></span></p>
+                <p><strong>User Description:</strong> <span id="description"></span></p>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Bootstrap JS and dependencies -->
+    <!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!-- Popper.js -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyD3mvLJORKunKc5HjLh73NJ1SkByp6797c",
+            authDomain: "youthspring-af954.firebaseapp.com",
+            databaseURL: "https://youthspring-af954-default-rtdb.firebaseio.com",
+            projectId: "youthspring-af954",
+            storageBucket: "youthspring-af954.firebasestorage.app",
+            messagingSenderId: "190059933611",
+            appId: "1:190059933611:web:871f54b6d282452337acee",
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        var db = firebase.firestore();
+
+        // Function to fetch user profile data from Firestore
+        function fetchUserProfile() {
+            var userEmail = "user@example.com"; // Replace with the actual user email from authentication
+
+            db.collection("users").doc(userEmail).get().then(function(doc) {
+                if (doc.exists) {
+                    var userData = doc.data();
+                    document.getElementById('fullName').innerText = userData.fullName;
+                    document.getElementById('email').innerText = userData.email;
+                    document.getElementById('phoneNumber').innerText = userData.phoneNumber;
+                    document.getElementById('dob').innerText = userData.dob;
+                    document.getElementById('description').innerText = userData.description;
+                } else {
+                    console.log("No such document!");
+                }
+            }).catch(function(error) {
+                console.log("Error getting document:", error);
+            });
+        }
+
+        // Call fetchUserProfile on page load
+        window.onload = fetchUserProfile;
+
+        // Logout function
+        function logout() {
+            // Implement your logout functionality here
+            alert("Logged out!");
+            window.location.href = "/login"; // Redirect to login page
+        }
+    </script>
+</body>
 </html>
