--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -6,6 +6,7 @@
     <title>Dashboard</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script type="module" src="../app.js"></script>
     <style>
         body {
             background-color: #f4f4f9;
