--- a/pages/community-relief.html
+++ b/pages/community-relief.html
@@ -7,6 +7,40 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Firebase App (core SDK) -->
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+
+<!-- Firebase Auth SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+
+<script>
+  // Your Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyD3mvLJORKunKc5HjLh73NJ1SkByp6797c",
+    authDomain: "youthspring-af954.firebaseapp.com",
+    databaseURL: "https://youthspring-af954-default-rtdb.firebaseio.com",
+    projectId: "youthspring-af954",
+    storageBucket: "youthspring-af954.firebasestorage.app",
+    messagingSenderId: "190059933611",
+    appId: "1:190059933611:web:871f54b6d282452337acee",
+    measurementId: "G-24SVNJJKDC"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+<script>
+  // Auth protection logic
+  firebase.auth().onAuthStateChanged(function(user) {
+    if (!user) {
+      // Save the current path so we can return after login/signup
+      localStorage.setItem("redirectAfterLogin", window.location.pathname);
+      // Redirect to signup/login page
+      window.location.href = "/signup.html";
+    }
+  });
+</script>
     <div id="header">Community Relief & Outreach</div>
     <div class="nav-grid">
         <a href="../index.html">Home</a>
