--- a/login.html
+++ b/login.html
@@ -129,6 +129,15 @@
             }
         });
     </script>
+    <script>
+  firebase.auth().onAuthStateChanged(function(user) {
+    if (user) {
+      const redirectURL = localStorage.getItem("redirectAfterLogin") || "/home.html";
+      localStorage.removeItem("redirectAfterLogin");
+      window.location.href = redirectURL;
+    }
+  });
+    </script>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
