--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -109,7 +109,30 @@
     </style>
 </head>
 <body>
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
 
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyD3mvLJORKunKc5HjLh73NJ1SkByp6797c",
+    authDomain: "youthspring-af954.firebaseapp.com",
+    databaseURL: "https://youthspring-af954-default-rtdb.firebaseio.com",
+    projectId: "youthspring-af954",
+    storageBucket: "youthspring-af954.firebasestorage.app",
+    messagingSenderId: "190059933611",
+    appId: "1:190059933611:web:871f54b6d282452337acee",
+    measurementId: "G-24SVNJJKDC"
+  };
+  firebase.initializeApp(firebaseConfig);
+
+  firebase.auth().onAuthStateChanged(function(user) {
+    if (!user) {
+      localStorage.setItem("redirectAfterLogin", window.location.pathname);
+      window.location.href = "/signup.html"; // or "/login.html" — your choice
+    }
+  });
+</script>
     <!-- Header -->
     <div id="header">
         Youth Spring - Empowering Nigerian Youth
