--- a/pages/programs.html
+++ b/pages/programs.html
@@ -188,7 +188,7 @@
   auth.onAuthStateChanged(function(user) {
     if (!user) {
       localStorage.setItem("redirectAfterLogin", window.location.pathname);
-      window.location.href = "/signup.html"; // or "/login.html" — your choice
+      window.location.href = "/sign-up.html"; // or "/login.html" — your choice
     }
   });
 </script>
