--- a/sign-up.html
+++ b/sign-up.html
@@ -117,7 +117,7 @@
                 });
 
                 // Redirect to edit profile page
-                window.location.href = "edit-profile.html";
+                window.location.href = "pages/dit-profile.html";
             } catch (error) {
                 alert('Error: ' + error.message);
             }
@@ -139,7 +139,7 @@
                 });
 
                 // Redirect to dashboard
-                window.location.href = "edit-profile.html";
+                window.location.href = "pages/edit-profile.html";
             } catch (error) {
                 alert('Error: ' + error.message);
             }
