--- a/pages/donate.html
+++ b/pages/donate.html
@@ -1,1 +1,39 @@
-<meta name="description" content="Support Youth Spring's mission to empower Nigerian youth. Donate today and help provide loans, training, and mentorship to underprivileged individuals.">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Audio Player</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background: #f5f5f5;
+    }
+    .audio-player {
+      background: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      max-width: 400px;
+      margin: auto;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    audio {
+      width: 100%;
+      outline: none;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="audio-player">
+    <h2>Now Playing</h2>
+    <audio controls>
+      <source src="https://jmp.sh/s/ou7FtGpagMJVbNp5JB2B" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
+
+</body>
+</html>
