--- a/pages/donate.html
+++ b/pages/donate.html
@@ -30,7 +30,7 @@
   <div class="audio-player">
     <h2>Now Playing</h2>
     <audio controls>
-      <source src="https://jmp.sh/s/ou7FtGpagMJVbNp5JB2B" type="audio/mpeg">
+      <source src="image/Fast.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
   </div>
