--- a/pages/donate.html
+++ b/pages/donate.html
@@ -30,11 +30,10 @@
   <div class="audio-player">
     <h2>Now Playing</h2>
     <audio controls>
-      <source src="https://vocaroo.com/embed/1cNHqVQITk9T?autoplay=0+" type="audio/mpeg">
+      <source src="https://vocaroo.com/embed/1cNHqVQITk9T?autoplay=0" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
   </div>
-<div><iframe width="300" height="60" src="https://vocaroo.com/embed/1cNHqVQITk9T?autoplay=0" frameborder="0" allow="autoplay"></iframe><br><a href="https://voca.ro/1cNHqVQITk9T" title="Vocaroo Voice Recorder" target="_blank">View on Vocaroo &gt;&gt;</a></div>
+
 </body>
 </html>
-<div><iframe width="300" height="60" src="https://vocaroo.com/embed/1cNHqVQITk9T?autoplay=0" frameborder="0" allow="autoplay"></iframe><br><a href="https://voca.ro/1cNHqVQITk9T" title="Vocaroo Voice Recorder" target="_blank">View on Vocaroo &gt;&gt;</a></div>
