--- a/pages/about.html
+++ b/pages/about.html
@@ -147,11 +147,120 @@
 
     <!-- Main Content -->
     <main>
-        <section id="about">
+        <class id="about">
             <!-- Content of the about section goes here -->
             
-        </section>
-    </main>
+---
+
+#About Youth Spring NGO
+
+Youth Spring NGO is a dynamic, youth-led initiative dedicated to nurturing the aspirations of young Nigerians and equipping them with the tools they need to flourish in today’s rapidly changing world. Founded on principles of community, innovation, and solidarity, we believe that investing in our youth is the most powerful catalyst for sustainable development and positive societal transformation.
+
+
+---
+
+#Our Mission
+
+To empower Nigerian youth through targeted programs in education, skill development, financial support, and community engagement — enabling them to realize their fullest potential and become leaders of tomorrow.
+
+
+---
+
+#Our Vision
+
+A Nigeria where every young person, regardless of background or circumstance, has access to quality education, meaningful opportunities, and the confidence to drive change in their communities and beyond.
+
+
+---
+
+#Our Story
+
+Youth Spring NGO emerged from a conversation between a group of passionate graduates and young professionals who recognized the immense talents and challenges facing Nigerian youth. United by a shared conviction that no dream should go unsupported, they launched Youth Spring to:
+
+1. Bridge Gaps in access to education and vocational training
+
+
+2. Foster Entrepreneurship and job readiness through mentorship and seed funding
+
+
+3. Build Community by creating safe spaces for collaboration, creativity, and peer support
+
+
+
+Since our inception, we have mobilized volunteers, secured partnerships, and piloted innovative programs, building momentum toward lasting social impact.
+
+
+---
+
+#What We Do
+
+Educational Scholarships: Awarding need-based grants to high-potential students for secondary and tertiary studies.
+
+Skill-Building Workshops: Hands-on training in digital literacy, coding, graphic design, and entrepreneurship.
+
+Micro-Grants & Seed Funding: Financial support for youth-led startups and community projects.
+
+Mentorship Circles: Pairing participants with industry experts, business leaders, and alumni for guidance and networking.
+
+Community Forums: Hosting town-hall events, hackathons, and speaker series to share knowledge and foster collaboration.
+
+
+
+---
+
+#Our Values
+
+Inclusivity: We welcome youth from every background and identity.
+
+Innovation: We champion creative solutions and continuous learning.
+
+Integrity: We operate transparently and uphold ethical standards.
+
+Collaboration: We believe collective effort multiplies impact.
+
+Resilience: We persist through challenges and adapt to thrive.
+
+
+
+---
+
+#Our Team
+
+Driven by volunteers, advisors, and partners across Nigeria and the diaspora, our core team brings expertise in education, technology, finance, and community development. Together, we blend youthful energy with seasoned insights to deliver programs that resonate and endure.
+
+
+---
+
+Get Involved
+
+Youth Spring is fueled by the passion of supporters like you. Here’s how you can join our movement:
+
+Volunteer: Share your skills as a mentor, trainer, or event organizer.
+
+Donate: Provide financial backing for scholarships, grants, and operational growth.
+
+Partner: Collaborate with us on co-branded projects, sponsorships, or resource exchanges.
+
+Advocate: Amplify our message on social media and in your networks.
+
+
+
+---
+
+> Together, we can spark a spring of opportunity for every young Nigerian.
+
+
+
+Ready to make a difference? Subscribe to our newsletter or Get in Touch today!
+
+
+---
+
+
+
+I’ve added a clear horizontal divider (---) at the top, between every major section, and at the bottom to ensure distinct separation throughout the page. Let me know if you’d like a different style or any further adjustment.
+  
+  </main>
 
     <!-- Footer -->
     <!-- Footer Text (above bottom nav) -->
